# hectum

./: README.md  setup.cfg
src/modelo/: pessoa.py
