[metadata]
name = hectum
version = 0.0.1
author = anderson
author_email = author@example.com
description = Modelo de Objetos
long_description = file: README.md
long_description_content_type = text/markdown
url = http://www.google.com
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
